--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Shadrack M. Inusah</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:s.inusah@studentambassadors.com">s.inusah@studentambassadors.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/KojoShaddy">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/shadrack-inusah/">LinkedIn</a></li>
+                    <li><a href="https://twitter.com/kojo_shaddy">Twitter</a></li>
                 </ul>    
             </section>
             
